[build-system]
requires = [
  "setuptools>=69",
  "wheel",
]
build-backend = "setuptools.build_meta"


[project]
name = "orbit-framework-server"
version = "0.2.0"
description = "Backend server runtime for Orbit"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
  { name = "Pranav Manglik" }
]

keywords = [
  "orbit",
  "framework",
  "server",
  "asgi",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "orbit-framework-core>=0.2.0",
  "uvicorn>=0.30.0",
]


[tool.setuptools.packages.find]
include = ["orbit_server*"]